Final small changes implemented

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -12,7 +12,7 @@
 <header class="mb-3">
     <div class="container d-flex justify-content-center align-items-center">
         <a href="app/views/home.html"><img src="../../assets/images/logo.png" alt="logo"></a>
-        <ul class="row justify-content-center align-items-center mr-3">
+        <ul class="row justify-content-center align-items-center mr-3 mt-3">
             <li>CALL US: + 1 800-567-8990</li>
             <li>WRITE US: OFFICE@EXAMPLE.COM</li>
             <li>OPENING TIMES: MON - FRI: 9:00 - 19:00</li>
@@ -31,10 +31,10 @@
             <div class="dropdown"> 
             <span><a class="mr-3" href="pages.html">PAGES</a></span>
              <div class="dropdown-content block">
-                 <a class="mr-3" href="#">CLASSES DETAILS</a>
-                 <a class="mr-3" href="#">BLOG DETAILS</a>
-                 <a class="mr-3" href="#">PRICING</a>
-                 <a class="mr-3" href="#">FAQ</a>
+              <li><a class="" href="#">CLASSES DETAILS</a></li>
+              <li><a class="" href="#">BLOG DETAILS</a></li>
+              <li><a class="" href="#">PRICING</a></li>
+              <li><a class="" href="#">FAQ</a></li>
              </div>
              </div>
             <a class="mr-3" href="blog.html">BLOG</a>
@@ -42,14 +42,14 @@
         </nav>
     
         <span>
-            <img class="mr-4" src="../../assets/images/instagram-16 (1).png" alt="instagram-16">
-            <img class="mr-4" src="../../assets/images/facebook-3-16 (1).png" alt="facebook-3-16">
-            <img class="mr-4" src="../../assets/images/twitter-16 (1).png" alt="twitter-16">
-            <img class="mr-4" src="../../assets/images/youtube-4-16 (1).png" alt="youtube-4-16">
-        </span>
+          <a href="#"><img class="mr-4" src="../../assets/images/instagram-16 (1).png" alt="instagram-16"></a>
+          <a href="#"><img class="mr-4" src="../../assets/images/facebook-3-16 (1).png" alt="facebook-3-16"></a>
+          <a href="#"><img class="mr-4" src="../../assets/images/twitter-16 (1).png" alt="twitter-16"></a>
+          <a href="#"><img class="mr-4" src="../../assets/images/youtube-4-16 (1).png" alt="youtube-4-16"></a>
+      </span>
         </div>
   <div class="d-flex justify-content-center about-top-text text-white">
-    <div class="">
+    <div class="text-center">
         <h2>About Us</h2>
             <div class="central-nav" >
                 <a href="../views/home.html">Home/</a>
@@ -344,19 +344,22 @@
 <section class="aboutFourth">
     <div class="container">
         <div class="d-flex-column text-center justify-content-center">
-            <h2 class="mt-5">Upcoming Courses</h2>
-            <p class="mt-5">The trainings are multi-style and you will learn and practice Hatha Vinyasa (flow)
-                and Yin Yoga.</p>
+            <h2 class="mt-5">What We Offer</h2>
+            <p class="mt-5">The trainings are multi-style and you will learn and practice Hatha Vinyasa
+              (flow) and Yin Yoga.</p>
         </div>
         <!--CARDS-->
         <div>
             <div class="card-deck mt-5">
                 <div class="card">
                   <img src="../../assets/images/classes-1.PNG" class="card-img-top" alt="classes-1">
+                  <div class="label-blue">
+                    <span>20 Jun 2019</span>
+                  </div>
                   <div class="card-body">
-                    <p>14 Days | Start on 10th Every Month</p>
+                    <p class="text-muted">14 Days | Start on 10th Every Month</p>
                     <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
-                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                    <p class="card-text"><span class="font-weight-bold">Jordan Lawson</span><span class="font-weight-light"> - Yoga Teacher</span></p>
                   </div>
                   <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
@@ -364,10 +367,13 @@
                 </div>
                 <div class="card">
                   <img src="../../assets/images/classes-2.png" class="card-img-top" alt="classes-2">
+                  <div class="label-blue">
+                    <span>20 Jun 2019</span>
+                  </div>
                   <div class="card-body">
-                      <p>14 Days | Start on 10th Every Month</p>
+                      <p class="text-muted">14 Days | Start on 10th Every Month</p>
                     <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
-                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                    <p class="card-text"><span class="font-weight-bold">Jordan Lawson</span><span class="font-weight-light"> - Yoga Teacher</span></p>
                   </div>
                   <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
@@ -375,10 +381,13 @@
                 </div>
                 <div class="card">
                   <img src="../../assets/images/classes-3.png" class="card-img-top" alt="classes-3">
+                  <div class="label-blue">
+                    <span>20 Jun 2019</span>
+                  </div>
                   <div class="card-body">
-                      <p>14 Days | Start on 10th Every Month</p>
+                      <p class="text-muted">14 Days | Start on 10th Every Month</p>
                     <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
-                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                    <p class="card-text"><span class="font-weight-bold">Jordan Lawson</span> <span class="font-weight-light"> - Yoga Teacher</span></p>
                   </div>
                   <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
@@ -426,74 +435,79 @@
     </div>
 </section>
 <!--FOOTER-->
-<footer class="mt-5">
-    <section class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <div class="footer__about">
-                        <img src="../../assets/images/footer-logo.png" alt="footer-logo">
-                        <ul>
-                            <li> Mon - Fri: 6:30am - 07:45pm</li>
-                            <li> Sat - Sun: 8:30am - 05:45pm</li>
-                        </ul>
-                        <form action="#">
-                            <input type="text" placeholder="Your Email">
-                            <button type="submit">Submit</button>
-                        </form>
-                        </div>
-                        </div>
-                        <div class="col-2">
-                            <div>
-                            <h5>Inspiration</h5>
-                                <ul>
-                                    <li><a href="#">Online Pilates</a></li>
-                                    <li><a href="#">Yoga for Beginners</a></li>
-                                    <li><a href="#">Online Pilates</a></li>
-                                    <li><a href="#">Online Yoga</a></li>
-                                    <li><a href="#">Conditioning</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-2">
-                            <div>
-                                <h5>About Us</h5>
-                                <ul>
-                                    <li><a href="#">Our Vision</a></li>
-                                    <li><a href="#">Our Mission</a></li>
-                                    <li><a href="#">Meet The Team</a></li>
-                                    <li><a href="#">Introduce</a></li>
-                                    <li><a href="#">Customer Service</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6">
-                            <div>
-                                <h5>Contact Us</h5>
-                                <ul>
-                                    <li> (01) 436 8888</li>
-                                    <li> hello@zogin.com</li>
-                                    <li> 828 Granville Lights Suite 466</li>
-                                </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                        <div class="row">
-                        <div class="col-6">
-                            <div>
-                                <p>Copyright ©2020 All rights reserved | This template is made with  by Colorlib</p>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                        <div>
-                        <!--INSERT SOCIAL MEDIA ICONS-->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </section>
+<footer>
+  <section class="footer mt-5">
+      <div class="container">
+          <div class="d-flex">
+              <div class="col-4">
+                  <div class="footer__about">
+                      <img src="../../assets/images/footer-logo.png" alt="footer-logo">
+                      <ul>
+                          <li><img src="../../assets/images/time-8-16.png" alt="time"> Mon - Fri: 6:30am - 07:45pm</li>
+                          <li><img src="../../assets/images/time-8-16.png" alt="time"> Sat - Sun: 8:30am - 05:45pm</li>
+                      </ul>
+                      <form action="#">
+                          <input type="text" placeholder="Your Email">
+                          <button type="submit">Submit</button>
+                      </form>
+                      </div>
+                      </div>
+                      <div class="col-2">
+                          <div>
+                          <h5>Inspiration</h5>
+                              <ul>
+                                  <li><a href="#">Online Pilates</a></li>
+                                  <li><a href="#">Yoga for Beginners</a></li>
+                                  <li><a href="#">Online Pilates</a></li>
+                                  <li><a href="#">Online Yoga</a></li>
+                                  <li><a href="#">Conditioning</a></li>
+                              </ul>
+                          </div>
+                      </div>
+                      <div class="col-2">
+                          <div>
+                              <h5>About Us</h5>
+                              <ul>
+                                  <li><a href="#">Our Vision</a></li>
+                                  <li><a href="#">Our Mission</a></li>
+                                  <li><a href="#">Meet The Team</a></li>
+                                  <li><a href="#">Introduce</a></li>
+                                  <li><a href="#">Customer Service</a></li>
+                              </ul>
+                          </div>
+                      </div>
+                      <div class="col-4 ">
+                          <div>
+                              <h5>Contact Us</h5>
+                              <ul>
+                                  <li><img src="../../assets/images/phone-62-16.png" alt="phone"> (01) 436 8888</li>
+                                  <li><img src="../../assets/images/calendar-4-16.png" alt="calendar-4-16"> hello@zogin.com</li>
+                                  <li><img src="../../assets/images/location-16.png" alt="location"> 828 Granville Lights Suite 466</li>
+                              </ul>
+                              </div>
+                          </div>
+                      </div>
+                      <div>
+                      <div class="row">
+                      <div class="col-6">
+                          <div>
+                              <p>Copyright ©2020 All rights reserved | This template is made with  by Colorlib</p>
+                          </div>
+                      </div>
+                      <div class="col-6 d-flex justify-content-end">
+                          <div>
+                      
+                                  <a href="#"><img class="mr-4" src="../../assets/images/instagram-16 (1).png" alt="instagram-16"></a>
+                                  <a href="#"><img class="mr-4" src="../../assets/images/facebook-3-16 (1).png" alt="facebook-3-16"></a>
+                                  <a href="#"><img class="mr-4" src="../../assets/images/twitter-16 (1).png" alt="twitter-16"></a>
+                                  <a href="#"><img class="mr-4" src="../../assets/images/youtube-4-16 (1).png" alt="youtube-4-16"></a>
+                              
+                          </div>
+                      </div>
+              </div>
+          </div>
+      </div>
+      </section>
 </footer>
 
     
