--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -12,7 +12,7 @@
 <header class="mb-3">
     <div class="container d-flex justify-content-center align-items-center">
         <a href="app/views/home.html"><img src="../../assets/images/logo.png" alt="logo"></a>
-        <ul class="row justify-content-center align-items-center mr-3">
+        <ul class="row justify-content-center align-items-center mr-3 mt-3">
             <li>CALL US: + 1 800-567-8990</li>
             <li>WRITE US: OFFICE@EXAMPLE.COM</li>
             <li>OPENING TIMES: MON - FRI: 9:00 - 19:00</li>
@@ -31,10 +31,10 @@
                 <div class="dropdown"> 
                 <span><a class="mr-3" href="pages.html">PAGES</a></span>
                  <div class="dropdown-content block">
-                     <a class="mr-3" href="#">CLASSES DETAILS</a>
-                     <a class="mr-3" href="#">BLOG DETAILS</a>
-                     <a class="mr-3" href="#">PRICING</a>
-                     <a class="mr-3" href="#">FAQ</a>
+                    <li><a class="" href="#">CLASSES DETAILS</a></li>
+                    <li><a class="" href="#">BLOG DETAILS</a></li>
+                    <li><a class="" href="#">PRICING</a></li>
+                    <li><a class="" href="#">FAQ</a></li>
                  </div>
                  </div>
                 <a class="mr-3" href="blog.html">BLOG</a>
@@ -42,14 +42,14 @@
             </nav>
         
             <span>
-                <img class="mr-4" src="../../assets/images/instagram-16 (1).png" alt="instagram-16">
-                <img class="mr-4" src="../../assets/images/facebook-3-16 (1).png" alt="facebook-3-16">
-                <img class="mr-4" src="../../assets/images/twitter-16 (1).png" alt="twitter-16">
-                <img class="mr-4" src="../../assets/images/youtube-4-16 (1).png" alt="youtube-4-16">
+                <a href="#"><img class="mr-4" src="../../assets/images/instagram-16 (1).png" alt="instagram-16"></a>
+                <a href="#"><img class="mr-4" src="../../assets/images/facebook-3-16 (1).png" alt="facebook-3-16"></a>
+                <a href="#"><img class="mr-4" src="../../assets/images/twitter-16 (1).png" alt="twitter-16"></a>
+                <a href="#"><img class="mr-4" src="../../assets/images/youtube-4-16 (1).png" alt="youtube-4-16"></a>
             </span>
             </div>
       <div class="d-flex justify-content-center about-top-text text-white">
-        <div class="">
+        <div class="text-center">
             <h2>Contact Us</h2>
                 <div class="central-nav" >
                     <a href="../views/home.html">Home/</a>
@@ -122,13 +122,13 @@
 <footer>
     <section class="footer">
         <div class="container">
-            <div class="row">
+            <div class="d-flex">
                 <div class="col-4">
                     <div class="footer__about">
                         <img src="../../assets/images/footer-logo.png" alt="footer-logo">
                         <ul>
-                            <li> Mon - Fri: 6:30am - 07:45pm</li>
-                            <li> Sat - Sun: 8:30am - 05:45pm</li>
+                            <li><img src="../../assets/images/time-8-16.png" alt="time"> Mon - Fri: 6:30am - 07:45pm</li>
+                            <li><img src="../../assets/images/time-8-16.png" alt="time"> Sat - Sun: 8:30am - 05:45pm</li>
                         </ul>
                         <form action="#">
                             <input type="text" placeholder="Your Email">
@@ -160,13 +160,13 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="col-4 ">
                             <div>
                                 <h5>Contact Us</h5>
                                 <ul>
-                                    <li> (01) 436 8888</li>
-                                    <li> hello@zogin.com</li>
-                                    <li> 828 Granville Lights Suite 466</li>
+                                    <li><img src="../../assets/images/phone-62-16.png" alt="phone"> (01) 436 8888</li>
+                                    <li><img src="../../assets/images/calendar-4-16.png" alt="calendar-4-16"> hello@zogin.com</li>
+                                    <li><img src="../../assets/images/location-16.png" alt="location"> 828 Granville Lights Suite 466</li>
                                 </ul>
                                 </div>
                             </div>
@@ -178,11 +178,16 @@
                                 <p>Copyright ©2020 All rights reserved | This template is made with  by Colorlib</p>
                             </div>
                         </div>
-                        <div class="col-6">
-                        <div>
-                        <!--INSERT SOCIAL MEDIA ICONS-->
+                        <div class="col-6 d-flex justify-content-end">
+                            <div>
+                        
+                                    <a href="#"><img class="mr-4" src="../../assets/images/instagram-16 (1).png" alt="instagram-16"></a>
+                                    <a href="#"><img class="mr-4" src="../../assets/images/facebook-3-16 (1).png" alt="facebook-3-16"></a>
+                                    <a href="#"><img class="mr-4" src="../../assets/images/twitter-16 (1).png" alt="twitter-16"></a>
+                                    <a href="#"><img class="mr-4" src="../../assets/images/youtube-4-16 (1).png" alt="youtube-4-16"></a>
+                                
+                            </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
