--- a/app/views/about.html
+++ b/app/views/about.html
@@ -435,7 +435,7 @@
     </div>
 </section>
 <!--FOOTER-->
-<footer>
+<footer class="mt-5">
   <section class="footer mt-5">
       <div class="container">
           <div class="d-flex">
