--- a/app/views/home.html
+++ b/app/views/home.html
@@ -387,7 +387,7 @@
     </div>
 </section>
 <!--FOOTER-->
-<footer>
+<footer class=" mt-5">
     <section class="footer">
         <div class="container">
             <div class="d-flex">
